i18n/zh-Hant/docusaurus-plugin-content-docs/version-0.2.x/operations/remote.md
---
sidebar_position: 4
---

# 遠程操作

支持多遠程倉庫和高級選項的推送和拉取操作。

## 快捷鍵

| 按鍵 | 動作 |
| :--- | :--- |
| `p` | 推送 (Push) |
| `P` | 拉取 (Pull) |

## 工作流

### 推送更改

1.  **觸發**: 按 `p`。
2.  **邏輯流程**:
    - **檢查遠程**: Gitti 檢查您配置的遠程倉庫。
    - **場景 A (無遠程)**:
        - **彈窗**: "Add Remote" (添加遠程)。推送前必須添加遠程倉庫。
    - **場景 B (多遠程)**:
        - **彈窗**: "Choose Remote" (選擇遠程)。選擇推送到哪個遠程（例如 `origin`, `upstream`）。
        - **下一步**: 進入推送選項。
    - **場景 C (單遠程)**:
        - **下一步**: 直接進入推送選項。
3.  **推送選項**: 出現彈窗選擇推送模式：
    - `git push`
    - `git push --force`
    - `git push --force-with-lease`
4.  **確認**: 選擇選項並按 `enter`。

---

### 拉取更改

1.  **觸發**: 按 `P` (shift+p)。
2.  **邏輯流程**:
    - **檢查遠程**: 與推送類似，檢查現有遠程。
3.  **拉取選項**: 出現彈窗選擇拉取模式：
    - `git pull` (基於使用者配置)
    - `git pull --rebase`
    - `git pull --no-rebase`
4.  **確認**: 選擇選項並按 `enter`。

:::note
變基和合併選項將從當前分支自己的上游拉取。在即將推出的版本中將支持與其他遠程或分支進行變基或合併。
:::
