i18n/zh-Hant/docusaurus-plugin-content-docs/version-0.5.x/operations/remote.md
---
sidebar_position: 3
---

# 遠程操作

支持多遠程倉庫和高級選項的推送和拉取操作。

## 快捷鍵

| 按鍵    | 動作         | 備註                             |
| :------ | :----------- | :------------------------------- |
| `p`     | 推送 (Push)  | \* 全局生效 (彈出視窗顯示時無效) |
| `P`     | 拉取 (Pull)  | \* 全局生效 (彈出視窗顯示時無效) |
| `< / >` | 切換組件面板 |                                  |
| `n`     | 新建遠端     |                                  |
| `d`     | 移除遠端     |                                  |
| `e`     | 編輯遠端     |                                  |
| `enter` | 設為追蹤上游 |                                  |
| `?`     | 快捷鍵和說明 |                                  |

:::info
本地分支、標籤和遠端面板共享同一個空間。使用 `< / >` 在它們之間切換。
:::

## 工作流

### 添加遠端

1.  **導航**: 導航到遠端組件 (按 `1`) 或切換到它 (按 `< / >`)。
2.  **觸發**: 按 `n`。
3.  **輸入**: 輸入遠端名稱 (如 'origin')。
4.  **下一步**: 按 `tab` 移動到 URL 欄位。
5.  **輸入 URL**: 輸入遠端 URL (如 `https://example.com/repo.git` 或 `git@example.com:repo.git`)。
6.  **確認**: 按 `enter`。
7.  **關閉**: 按 `esc` 關閉輸出與視窗。

---

### 編輯遠端

1.  **導航**: 導航到遠端組件 (按 `1`) 或切換到它 (按 `< / >`)。
2.  **選擇**: 使用 `↑/↓` 選擇要編輯的遠端。
3.  **觸發**: 按 `e`。
4.  **編輯**: 輸入新的遠端名稱、URL 或兩者皆有。
5.  **確認**: 按 `enter`。
6.  **關閉**: 按 `esc` 關閉輸出與視窗。

---

### 移除遠端

1.  **導航**: 導航到遠端組件 (按 `1`) 或切換到它 (按 `< / >`)。
2.  **選擇**: 使用 `↑/↓` 選擇要移除的遠端。
3.  **觸發**: 按 `d`。
4.  **確認**: 按 `enter`。
5.  **關閉**: 按 `esc` 關閉輸出與視窗。

---

### 設為追蹤上游

1.  **導航**: 導航到遠端組件 (按 `1`) 或切換到它 (按 `< / >`)。
2.  **選擇**: 使用 `↑/↓` 選擇要設為追蹤上游的遠端。
3.  **觸發**: 按 `enter`。

---

### 推送更改

1.  **觸發**: 按 `p`。
2.  **邏輯流程**:
    - **檢查遠程**: Gitti 檢查您配置的遠程倉庫。
    - **場景 A (無遠程)**:
      - **彈窗**: "Add Remote" (添加遠程)。推送前必須添加遠程倉庫。
    - **場景 B (多遠程)**:
      - **彈窗**: "Choose Remote" (選擇遠程)。選擇推送到哪個遠程（例如 `origin`, `upstream`）。
      - **下一步**: 進入推送選項。
    - **場景 C (單遠程)**:
      - **下一步**: 直接進入推送選項。
3.  **推送選項**: 出現彈窗選擇推送模式：
    - `git push`
    - `git push --force`
    - `git push --force-with-lease`
4.  **確認**: 選擇選項並按 `enter`。

---

### 拉取更改

1.  **觸發**: 按 `P` (shift+p)。
2.  **邏輯流程**:
    - **檢查遠程**: 與推送類似，檢查現有遠程。
3.  **拉取選項**: 出現彈窗選擇拉取模式：
    - `git pull` (基於使用者配置)
    - `git pull --rebase`
    - `git pull --no-rebase`
4.  **確認**: 選擇選項並按 `enter`。

:::note
變基和合併選項將從當前分支自己的上游拉取。在即將推出的版本中將支持與其他遠程或分支進行變基或合併。
:::
